--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,9 @@ langchain-community = { path = "libs/community/", develop = true }
 langchain = { path = "libs/langchain/", develop = true }
 langchain-experimental = { path = "libs/experimental/", develop = true }
 
+[tool.setuptools.find]
+include = ["langchain-core", "langchain-community", "langchain", "langchain-experimental"]
+
 [tool.poetry.group.test.dependencies]
 
 
